--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,5 @@
-config:
-  info: "master branch,springcloud-config/config-dev.yml version=6" 
+config: 
+  info: master-dev-31
+feign:
+  hystrix:
+    enabled: false  #如果处理自身的容错就开启。开启方式与生产端不一样。 
