--- a/config-prod.yml
+++ b/config-prod.yml
@@ -1,2 +1,4 @@
-config:
-  info: "master branch,springcloud-config/config-prod.yml version=1" 
+label: master 
+profile: prod
+config: 
+  info: master-prod1
